# secure_message_server

./: .env  Cargo.toml  README.MD
docker/: DockerCompose.yml
migrations/: V1__create_messages_table.sql
migrations/2024-05-28-053314_create_messages/: up.sql
migrations/2024-05-28-054514_change_id_to_bigint/: down.sql  up.sql
migrations/2024-05-29-053903_add_views_left_to_messages/: down.sql  up.sql
src/: db.rs  main.rs  migrations.rs  schema.rs  storage.rs
