[package]
name = "secure_message_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
diesel = { version = "2.1.6", features = ["postgres", "r2d2"] }
r2d2 = "0.8.9"
dotenv = "0.15.0"
actix-web = "4.0"
log = "0.4"
env_logger = "0.9.0"
serde = { version = "1.0", features = ["derive"] }
uuid = { version = "0.8.2", features = ["serde", "v4"] }

